# Simple3DViewer

./: CMakeLists.txt  Camera.h  Mesh.h  Model.h  Shader.h  glad.c  main.cpp  readme.md
Shader/: light.fs  light.vs  shader.fs  shader.vs
model/keli/: keli.pmx
